fix+feat: Refactor code and add bulk-update for task groups
